--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,6 +8,7 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/mocha.conf
 
 
 ################
@@ -25,7 +26,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
+$terminal = kitty
 $fileManager = nautilus
 $menu = wofi --show drun
 
@@ -37,9 +38,12 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
+exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = sh .config/hypr/per-monitor-launcher.sh # My bar and wallpaper are set depending on the monitor
+exec-once = dunst
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 
 #############################
