--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,238 +1,190 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hypr.land/Configuring/
+# Catppuccin Hyprland config
 
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
+# Catppuccin colors
 source = ~/.config/hypr/mocha.conf
 
-
-################
-### MONITORS ###
-################
-
-# See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
 
-###################
-### MY PROGRAMS ###
-###################
+# Startup programs and scipts
+exec-once = sh .config/hypr/desktop-portals.sh
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-
-# Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
-$menu = wofi --show drun
-
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = sh .config/hypr/per-monitor-launcher.sh # My bar and wallpaper are set depending on the monitor
 exec-once = dunst
+exec-once = ckb-next -b
+#exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec = sh .config/hypr/scripts/get-last-focused-window.sh
+exec = eww daemon
 
+input {
+    kb_layout = ca
+    kb_variant = multix
+    kb_model =
+    kb_options =
+    kb_rules =
+    numlock_by_default=true
 
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
+    follow_mouse = 1
 
-# See https://wiki.hypr.land/Configuring/Environment-variables/
+    touchpad {
+        natural_scroll = yes
+    }
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
 
+gestures {
+    workspace_swipe=1
+    workspace_swipe_distance=400
+    workspace_swipe_invert=1
+    workspace_swipe_min_speed_to_force=30
+    workspace_swipe_cancel_ratio=0.5
+    workspace_swipe_create_new=0
+    workspace_swipe_forever=1
+}
 
-###################
-### PERMISSIONS ###
-###################
-
-# See https://wiki.hypr.land/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
-
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hypr.land/Configuring/Variables/
-
-# https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
+    gaps_in = 10
     gaps_out = 20
 
-    border_size = 2
-
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    border_size = 3
+    col.active_border=$teal
+    col.inactive_border=$surface2
 
     layout = dwindle
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 2
+    rounding = 15
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    blur = no
+    blur_size = 9
+    blur_passes = 4
+    blur_new_optimizations = on
 
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
+    drop_shadow = yes
+    shadow_range = 15
+    shadow_render_power = 3
+    col.shadow = rgba(000000ee)
 
-    # https://wiki.hypr.land/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
+    dim_inactive = false
+    dim_strength = 0.2
 
-        vibrancy = 0.1696
-    }
+    multisample_edges = true
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = yes
 
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = myBezier2, 0.65, 0, 0.35, 1
 
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    bezier=slow,0,0.85,0.3,1
+    bezier=overshot,0.7,0.6,0.1,1.1
+    bezier=bounce,1,1.6,0.1,0.85
+    bezier=slingshot,1,-1,0.15,1.25
+    bezier=nice,0,6.9,0.5,-4.20
+	
+    animation=windows,1,5,bounce,popin
+    animation=border,1,20,default
+    animation=fade,1,5,default
+    animation=workspaces,1,5,overshot,slide
 }
 
-# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = yes # you probably want this
+
+    col.group_border = $surface2
+    col.group_border_active = $teal
 }
 
-# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_is_master = true
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
-
-
-#############
-### INPUT ###
-#############
-
-# https://wiki.hypr.land/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = on
 }
 
-# Example per-device config
-# See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
+device:epic mouse V1 {
     sensitivity = -0.5
 }
 
+binds {
+	workspace_back_and_forth = true
 
-###################
-### KEYBINDINGS ###
-###################
+}
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+misc {
+	no_vfr = true
+}
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+windowrule = float, ^(pavucontrol)$
+windowrule = maxsize 600 800, ^(pavucontrol)$
+windowrule = center, ^(pavucontrol)$
+windowrule = tile, ^(libreoffice)$
+windowrule = float, ^(blueman-manager)$
+windowrule = nofullscreenrequest, ^(.*libreoffice.*)$
+windowrule = size 490 600, ^(org.gnome.Calculator)$
+windowrule = float, ^(org.gnome.Calculator)$
+windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$
+
+$mainMod = SUPER
+
+# Main binds
+bind = $mainMod, return, exec, kitty
+bind = $mainMod, Q, killactive, 
+bind = $mainMod, M, exit, 
+#bind = $mainMod, E, exec, thunar
+bind = $mainMod, V, togglefloating, 
+#bind = $mainMod, D, exec, wofi --show drun --term=kitty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
+#bind = $mainMod, C, exec, rofi -show calc -modi calc -no-show-match -no-sort -terse -no-persist-history -theme ~/.config/rofi/style.rasi
+#bind = $mainMod, L, exec, swaylock
+bind = $mainMod, G, togglegroup
+bind = $mainMod, F, fullscreen,
+bind = $mainMod, A, movetoworkspace, special
+#bind = $mainMod, P, pseudo, # dwindle
+#bind = $mainMod, J, togglesplit, # dwindle
+#bind = $mainMod, B, exec, sh .config/wofi/powermenu.sh
+#bind = $mainMod, W, exec, eww open --toggle overview  && eww update selected=_none
+#bind = $mainMod, N, exec, ~/wofi-emoji/wofi-emoji
+#bind = ALT, Tab, exec, hyprctl dispatch focuswindow pid:$(cat .config/hypr/scripts/last-focused-window | sed 's/.*\(pid: \([0-9]*\)\).*/\2 /')
+
+# Hardware controls using function keys
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
+binde = , XF86AudioRaiseVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ +5%
+binde = , XF86AudioLowerVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# Toggle gaps
+bind = $mainMod, H, exec, sh .config/hypr/toggle-gaps.sh
+
+# Toggle between floating windows
+#bind = ALT, Tab, cyclenext,
+#bind = ALT, Tab, bringactivetotop,
+
+bind = $mainMod, Tab, changegroupactive,
+
+# Resize focused window with arrow keys, indicated with borders of a different color
+bind = $mainMod, R, exec, hyprctl --batch keyword "general:col.active_border rgba(fab387ff);"
+bind = $mainMod, R, exec, hyprctl --batch keyword "dwindle:col.group_border_active rgba(fab387ff);"
+bind = $mainMod, R, submap, resize
+submap = resize
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+bind = , escape, exec, hyprctl --batch keyword "general:col.active_border rgba(94e2d5ff);"
+bind = , escape, exec, hyprctl --batch keyword "dwindle:col.group_border_active rgba(94e2d5ff);"
+bind = , escape, submap, reset
+submap = reset
+
+# Change DPI on external monitor
+#bind = $mainMod, F11, exec, hyprctl keyword monitor DP-2,3840x2160@60,0x0,1.25
+#bind = $mainMod, F12, exec, hyprctl keyword monitor DP-2,3840x2160@60,0x0,1
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -241,6 +193,7 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
+bind = $mainMod, MINUS, workspace, special 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -264,10 +217,6 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -276,32 +225,18 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bind = $mainMod CTRL, left, workspace, e-1
+bind = $mainMod CTRL, right, workspace, e+1
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+# Take a screenshot
+#bind = $mainMod,Print, exec, grim -g "$(slurp)" "$HOME/Pictures/screenshots/$(date +'%s_grim.png')"
+#bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
