--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,28 +11,11 @@ exec-once = sh .config/hypr/desktop-portals.sh
 
 exec-once = sh .config/hypr/per-monitor-launcher.sh # My bar and wallpaper are set depending on the monitor
 exec-once = dunst
-exec-once = ckb-next -b
+#exec-once = ckb-next -b
 #exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec = sh .config/hypr/scripts/get-last-focused-window.sh
 exec = eww daemon
-
-input {
-    kb_layout = ca
-    kb_variant = multix
-    kb_model =
-    kb_options =
-    kb_rules =
-    numlock_by_default=true
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = yes
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
 
 gestures {
     workspace_swipe=1
@@ -77,14 +60,13 @@ decoration {
 animations {
     enabled = yes
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.0
     bezier = myBezier2, 0.65, 0, 0.35, 1
-
-    bezier=slow,0,0.85,0.3,1
-    bezier=overshot,0.7,0.6,0.1,1.1
-    bezier=bounce,1,1.6,0.1,0.85
-    bezier=slingshot,1,-1,0.15,1.25
-    bezier=nice,0,6.9,0.5,-4.20
+    bezier = slow, 0, 0.85, 0.3, 1
+    bezier = overshot, 0.7, 0.6, 0.1, 1.0
+    bezier = bounce, 1, 1.0, 0.1, 0.85
+    bezier = slingshot, 1, 0, 0.15, 1.0
+    bezier = nice, 0, 1.0, 0.5, 0
 	
     animation=windows,1,5,bounce,popin
     animation=border,1,20,default
@@ -124,11 +106,11 @@ misc {
 windowrule = float, ^(pavucontrol)$
 windowrule = maxsize 600 800, ^(pavucontrol)$
 windowrule = center, ^(pavucontrol)$
-windowrule = tile, ^(libreoffice)$
-windowrule = float, ^(blueman-manager)$
-windowrule = nofullscreenrequest, ^(.*libreoffice.*)$
-windowrule = size 490 600, ^(org.gnome.Calculator)$
-windowrule = float, ^(org.gnome.Calculator)$
+#windowrule = tile, ^(libreoffice)$
+#windowrule = float, ^(blueman-manager)$
+#windowrule = nofullscreenrequest, ^(.*libreoffice.*)$
+#windowrule = size 490 600, ^(org.gnome.Calculator)$
+#windowrule = float, ^(org.gnome.Calculator)$
 windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$
 
 $mainMod = SUPER
@@ -136,7 +118,7 @@ $mainMod = SUPER
 # Main binds
 bind = $mainMod, return, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, W, exit, 
 #bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 #bind = $mainMod, D, exec, wofi --show drun --term=kitty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
@@ -234,8 +216,8 @@ bind = $mainMod CTRL, left, workspace, e-1
 bind = $mainMod CTRL, right, workspace, e+1
 
 # Take a screenshot
-#bind = $mainMod,Print, exec, grim -g "$(slurp)" "$HOME/Pictures/screenshots/$(date +'%s_grim.png')"
-#bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod,Print, exec, grim -g "$(slurp)" "$HOME/Pictures/screenshots/$(date +'%s_grim.png')"
+bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
