--- a/hypr/custom-hyprland.desktop
+++ b/hypr/custom-hyprland.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Custom Hyprland
 Comment=Custom Hyprland launcher
-Exec=/home/hm/.config/hypr/wrappedhl
+Exec=/home/hm/src/dotfiles/wrappedhl
 Type=Application
+Keywords=tiling;wayland;compositir;
