--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -118,7 +118,7 @@ $mainMod = SUPER
 # Main binds
 bind = $mainMod, return, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, W, exit, 
+bind = $mainMod, M, exit, 
 #bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 #bind = $mainMod, D, exec, wofi --show drun --term=kitty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
