--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,10 +41,12 @@ general {
 decoration {
     rounding = 15
 
-    blur = no
-    blur_size = 9
-    blur_passes = 4
-    blur_new_optimizations = on
+    blur {
+        enabled = false
+        size = 9
+        passes = 4
+        new_optimizations = on
+    }
 
     drop_shadow = yes
     shadow_range = 15
