--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,15 +48,15 @@ decoration {
         new_optimizations = on
     }
 
-    drop_shadow = yes
-    shadow_range = 15
-    shadow_render_power = 3
-    col.shadow = rgba(000000ee)
+    #drop_shadow = true
+    #shadow_range = 15
+    #shadow_render_power = 3
+    #shadow_color = 0xEE000000
 
     dim_inactive = false
     dim_strength = 0.2
 
-    multisample_edges = true
+    #multisample_edges = true
 }
 
 animations {
