--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,16 +47,18 @@ decoration {
         passes = 4
         new_optimizations = on
     }
-
-    #drop_shadow = true
-    #shadow_range = 15
-    #shadow_render_power = 3
-    #shadow_color = 0xEE000000
+    
+    shadow {
+        enable = true
+        range = 15
+        render_power = 3
+        color = 0xEE000000
+    }
 
     dim_inactive = false
     dim_strength = 0.2
 
-    #multisample_edges = true
+    multisample_edges = true
 }
 
 animations {
