--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,7 +49,6 @@ decoration {
     }
     
     shadow {
-        enable = true
         range = 15
         render_power = 3
         color = 0xEE000000
@@ -58,7 +57,6 @@ decoration {
     dim_inactive = false
     dim_strength = 0.2
 
-    multisample_edges = true
 }
 
 animations {
@@ -81,17 +79,19 @@ animations {
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
+}
 
-    col.group_border = $surface2
-    col.group_border_active = $teal
+group {
+    col.border_inactive = $surface2
+    col.border_active = $teal
 }
 
 master {
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
-    workspace_swipe = on
+    workspace_swipe = true
 }
 
 device:epic mouse V1 {
@@ -104,7 +104,7 @@ binds {
 }
 
 misc {
-	no_vfr = true
+	vfr = false
 }
 
 windowrule = float, ^(pavucontrol)$
