--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -94,22 +94,18 @@ gestures {
     workspace_swipe = true
 }
 
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
 
 binds {
 	workspace_back_and_forth = true
-
 }
 
 misc {
 	vfr = false
 }
 
-windowrule = float, ^(pavucontrol)$
-windowrule = maxsize 600 800, ^(pavucontrol)$
-windowrule = center, ^(pavucontrol)$
+windowrulev2 = float, class:^(pavucontrol)$
+windowrulev2 = maxsize 600 800, class:^(pavucontrol)$
+windowrulev2 = center, class:^(pavucontrol)$
 #windowrule = tile, ^(libreoffice)$
 #windowrule = float, ^(blueman-manager)$
 #windowrule = nofullscreenrequest, ^(.*libreoffice.*)$
