--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -111,7 +111,7 @@ windowrulev2 = center, class:^(pavucontrol)$
 #windowrule = nofullscreenrequest, ^(.*libreoffice.*)$
 #windowrule = size 490 600, ^(org.gnome.Calculator)$
 #windowrule = float, ^(org.gnome.Calculator)$
-windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
 
 $mainMod = SUPER
 
