--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,100 +1,28 @@
-# See https://github.com/dreamsofcode-io/tmux/blob/main/tmux.conf
-# for most suggestions in this configuration
-
-##########################
-# General configurations
-##########################
-
-# Allow 24 bit colour if terminal supports it
-set-option -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "tmux-256color"
+set -s escape-time 0
 
-# Start windows and panes at 1, not 0
-# so easier to go to them with keyboard
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+set -g status-style 'bg=#333333 fg=#5eacd3'
 set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
 
-# Enable mouse support
-set -g mouse on
-
-##########################
-# Plugin Configurations
-##########################
-
-## Theme, https://github.com/catppuccin/tmux
-set -g @plugin 'catppuccin/tmux'
-
-# Load tmux package manager
-set -g @plugin 'tmux-plugins/tpm'
-
-# Sensible configurations
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Copying and pasting / yank between Tmux and the system clipboard
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Session save and restore
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-# Appearance
-
-set -g @catppuccin_flavour 'mocha'
-
-set -g status-left ""
-set -g  status-right "#{E:@catppuccin_status_application}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
-# set -ag status-right "#{E:@catppuccin_status_user}"
-# set -ag status-right "#{E:@catppuccin_status_host}"
-set -ag status-right "#{E:@catppuccin_status_date_time}"
-
-##########################
-# Key bindings
-##########################
-
-# Option to map prefix to C-SPC
-# unbind C-b
-# set -g prefix C-Space
-
-# Use Alt-arrow keys without prefix key to switch panes
-# bind -n M-Left select-pane -L
-# bind -n M-Right select-pane -R
-# bind -n M-Up select-pane -U
-# bind -n M-Down select-pane -D
-
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
-# Shift Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
-
-## Vim like
-## - like moving panes and into / out of neovim
-## - neovim integration
-## set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# set vi-mode
 set-window-option -g mode-keys vi
-## copy, yank selection
-## v to begin select
-## C-v to toggle rectangle select
-## y to copy
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# Split windows in current working directory (cwd)
-# " horizontal
-# % vertical
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
-# Lazygit
-## Open lazygit with tmux prefix + g as popup
-bind-key g popup -EE -h 90% -w 90% -T lazygit -d "#{pane_current_path}" "lazygit"
+bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/personal/dev/todo.md"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+bind-key -r C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
+bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
+bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
+bind-key -r M-s run-shell "tmux split-window -h ascii-video-player ~/personal/dev/subway_surfer/frames"
+
