--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -52,7 +52,7 @@ exec-once = hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+ecosystem:no_update_news = true
 
 #####################
 ### LOOK AND FEEL ###
