--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/hm/Pictures/wallpapers/neonrain.png
-
+preload = /home/hm/src/dotfiles/wallpapers/neonrain.png
+wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/neonrain.png
