--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -59,8 +59,8 @@
     },
     "memory": {
         "interval": 30,
-        "format": "    {used:0.1f}G/{total:0.1f}G",
-        "max-length": 10
+        "format": "   {used:0.1f}G/{total:0.1f}G",
+        "max-length": 15
     },
     "custom/launcher":{
         "format": " ",
