--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -64,8 +64,8 @@
     },
     "custom/launcher":{
         "format": " ",
-        "on-click": "rofi -show drun",
-        "on-click-right": "killall rofi"
+        "on-click": "wofi -show drun",
+        "on-click-right": "killall wofi"
     },
     "custom/lock": {
     	"tooltip": false,
