--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -50,7 +50,7 @@
 		"spacing": 10
 	},
     "clock": {
-        "format": "{: %I:%M %p   %d/%m/%Y}"
+    	"format": "Week {:%V}   {:%H:%M}   {:%d/%m/%Y}"
     },
     "cpu": {
     	"interval": 1,
