--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -43,6 +43,7 @@ $menu = wofi -show drun -p "Search> " | xargs -I{} search {}
 # exec-once = waybar & hyprpaper
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = /usr/lib/xdg-desktop-portal-hyprland
 
 #############################
 ### ENVIRONMENT VARIABLES ###
