--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -97,7 +97,7 @@ decoration {
         color = rgba(1a1a1aee)
     }
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    blurls = waybar
     blur {
         enabled = true
         size = 8
