--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -8,8 +8,8 @@
 	"pulseaudio": {
 		"tooltip": false,
 		"scroll-step": 5,
-		"format": "{icon} {volume}%",
-		"format-muted": "{icon} {volume}%",
+		"format": "{icon}",
+		"format-muted": "{icon}",
 		"on-click":"pactl set-sink-mute @DEFAULT_SINK@ toggle",
 		"format-icons": {
 			"default": [" ", " ", " "]
@@ -68,7 +68,7 @@
         "on-click": "kitty -e paru -Syu && notify-send 'The system has been updated' "
     },
     "network": {
-        "format-wifi": "{icon}",
+        "format-wifi": "{icon} ",
         "format-ethernet": "  {ifname}: {ipaddr}/{cidr}",
         "format-linked": "  {ifname} (No IP)",
         "format-disconnected": "⚠ Disconnected",
