--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,10 +26,12 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 #$terminal = ghostty
+#$fileManager = dolphin
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 #$menu = rofi -show drun -p "Search> " | xargs -I{} search {}
-$menu = wofi -show drun -p "Search> " | xargs -I{} search {}
+#$menu = wofi -show drun -p "Search> " | xargs -I{} search {}
+$menu = wofi --show drun --term=kitty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
 
 #################
 ### AUTOSTART ###
@@ -44,6 +46,7 @@ $menu = wofi -show drun -p "Search> " | xargs -I{} search {}
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = /usr/lib/xdg-desktop-portal-hyprland
+exec-once = hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -163,7 +166,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the mascot wallpapers
     focus_on_activate = true
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
@@ -189,13 +192,13 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+# Main binds
+bind = $mainMod, return, exec, kitty
+bind = $mainMod, W, killactive,
 bind = $mainMod SHIFT, M, exit,
+bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, d, exec, $menu
@@ -211,29 +214,33 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, plus, workspace, 1
-bind = $mainMod, bracketleft, workspace, 2
-bind = $mainMod, braceleft, workspace, 3
-bind = $mainMod, parenleft, workspace, 4
-bind = $mainMod, ampersand, workspace, 5
-bind = $mainMod, equal, workspace, 6
-bind = $mainMod, parenright, workspace, 7
-bind = $mainMod, braceright, workspace, 8
-bind = $mainMod, bracketright, workspace, 9
-bind = $mainMod, asterisk, workspace, 10
+bind = $mainMod, MINUS, workspace, special 
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-bind = $mainMod SHIFT, plus, movetoworkspace, 1
-bind = $mainMod SHIFT, bracketleft, movetoworkspace, 2
-bind = $mainMod SHIFT, braceleft, movetoworkspace, 3
-bind = $mainMod SHIFT, parenleft, movetoworkspace, 4
-bind = $mainMod SHIFT, ampersand, movetoworkspace, 5
-bind = $mainMod SHIFT, equal, movetoworkspace, 6
-bind = $mainMod SHIFT, parenright, movetoworkspace, 7
-bind = $mainMod SHIFT, braceright, movetoworkspace, 8
-bind = $mainMod SHIFT, bracketright, movetoworkspace, 9
-bind = $mainMod SHIFT, asterisk, movetoworkspace, 10
+# Change workspace 
+bind = $mainMod CTRL, left, workspace, e-1
+bind = $mainMod CTRL, right, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -252,6 +259,10 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Take a screenshot
+bind = $mainMod,Print, exec, grim -g "$(slurp)" "$HOME/Pictures/screenshots/$(date +'%s_grim.png')"
+bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
