--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -187,6 +187,11 @@ device {
     sensitivity = -0.5
 }
 
+input {
+    touchpad {
+        natural_scroll = yes
+    }
+}
 
 ###################
 ### KEYBINDINGS ###
