--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -84,7 +84,9 @@ general {
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
+layerrule = blur, ^(waybar)$
+layerrule = ignorealpha 0, ^(waybar)$
+
 decoration {
     rounding = 10
     rounding_power = 2
@@ -100,15 +102,13 @@ decoration {
         color = rgba(1a1a1aee)
     }
 
-    blurls = waybar
     blur {
         enabled = true
         size = 8
         ignore_opacity = true
         passes = 3
         noise = 0.01
-
-        vibrancy = 0.1696
+        vibrancy = 0.17
     }
 }
 
