--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -206,7 +206,7 @@ bind = $mainMod SHIFT, M, exit,
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, d, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
