--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,11 +27,11 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 #$terminal = ghostty
 #$fileManager = dolphin
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautilus
 #$menu = rofi -show drun -p "Search> " | xargs -I{} search {}
 #$menu = wofi -show drun -p "Search> " | xargs -I{} search {}
-$menu = wofi --show drun --term=kitty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
+$menu = wofi --show drun --term=ghostty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
 
 #################
 ### AUTOSTART ###
@@ -200,7 +200,7 @@ input {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Main binds
-bind = $mainMod, return, exec, kitty
+bind = $mainMod, return, exec, ghostty
 bind = $mainMod, W, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod SHIFT, L, exec, hyprlock
@@ -277,7 +277,7 @@ bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# windowrule = float,class:^(ghostty)$,title:^(ghostty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
