--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -164,11 +164,10 @@ master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the mascot wallpapers
+    disable_hyprland_logo = true
+    force_default_wallpaper = 0
     focus_on_activate = true
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
 #############
