--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
 	"layer": "top",
 	"height": 28,
-	"modules-left": ["custom/launcher","network","cpu","memory","disk","custom/updates"],
+	"modules-left": ["custom/launcher","network","cpu","memory","custom/disk","custom/updates"],
 	"modules-center": ["hyprland/workspaces"],
 	"modules-right": ["pulseaudio","clock","battery","custom/power"], 
 	
@@ -67,11 +67,10 @@
         "interval": 60,
         "on-click": "ghostty -e paru -Syu && notify-send 'The system has been updated' "
     },
-        "disk": {
-        "interval": 30,
-        "format": " {used}/{total}",
-        "tooltip": false,
-        "path": "/"
+    "custom/disk": {
+        "format": " {}",
+        "exec": "df -B GiB / | tail -1 | awk '{print $3 \"G/\" $2 \"G\"}'",
+        "interval": 30
     },
     "network": {
         "format-wifi": "{icon} ",
