--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -60,12 +60,11 @@
     	"on-click": "sh -c '(sleep 0.5s; hyprlock)' & disown",
     	"format": " "
     },
-    "custom/updates":{
-        "format": "{} Updates",
-        "exec": "checkupdates-with-aur | wc -l",
-        "exec-if": "[[ $(checkupdates-with-aur | wc -l) != 0 ]]",
-        "interval": 60,
-        "on-click": "ghostty -e paru -Syu && notify-send 'The system has been updated' "
+    "custom/updates": {
+         "format": " {}",
+         "exec": "checkupdates-with-aur | wc -l",
+         "interval": 60,
+         "on-click": "ghostty -e paru -Syu && notify-send 'The system has been updated' "
     },
         "custom/disk": {
         "format": " {}",
