--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -47,7 +47,7 @@
     },
     "memory": {
         "interval": 15,
-        "format": "   {used:0.1f}G/{total:0.1f}G",
+        "format": "   {used:0.1f}G/{total:.0f}G",
         "max-length": 15
     },
     "custom/launcher":{
@@ -66,7 +66,7 @@
          "interval": 60,
          "on-click": "ghostty -e paru -Syu && notify-send 'The system has been updated' "
     },
-        "custom/disk": {
+    "custom/disk": {
         "format": " {}",
         "exec": "df -B GiB / | tail -1 | awk '{ sub(/GiB$/, \"\", $2); sub(/GiB$/, \"\", $3); print $3 \"G/\" $2 \"G\" }'",
         "interval": 30
