--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -56,6 +56,8 @@ exec-once = hypridle
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland
 ecosystem:no_update_news = true
 
 #####################
