--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,17 @@
 preload = /home/hm/src/dotfiles/wallpapers/neonrain.png
 wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/neonrain.png
+
+#preload = /home/hm/src/dotfiles/wallpapers/alienlandscape.png
+#wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/alienlandscape.png
+
+#preload = /home/hm/src/dotfiles/wallpapers/fjord.jpg
+#wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/fjord.jpg
+
+#preload = /home/hm/src/dotfiles/wallpapers/nature.jpg
+#wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/nature.jpg
+
+#preload = /home/hm/src/dotfiles/wallpapers/nm.jpeg
+#wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/nm.jpeg
+
+#preload = /home/hm/src/dotfiles/wallpapers/streetsig.jpg
+#wallpaper = eDP-1,/home/hm/src/dotfiles/wallpapers/streetsig.jpg
