--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,8 +14,14 @@
 ### MONITORS ###
 ################
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# Laptop built-in screen (adjust scale if text is too small/large)
+monitor = eDP-1, preferred, 0x0, 1.25  # Position at (0,0), auto resolution, scale factor 1.25
+
+# External HDMI monitor (scale 1 for standard DPI)
+monitor = HDMI-A-1, preferred, auto, 2  # Auto-position (e.g., to the right), auto resolution, scale 1
+
+# Fallback for unknown monitors
+monitor = , preferred, auto, auto
 
 
 ###################
@@ -58,6 +64,9 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
+env = GDK_SCALE,1  # Base scale for GTK apps; adjust if needed
+env = QT_SCALE_FACTOR,1.25  # Match your laptop scale
+env = ELECTRON_OZONE_PLATFORM_HINT,auto  # For Electron apps (e.g., VS Code)
 ecosystem:no_update_news = true
 
 #####################
@@ -269,6 +278,15 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Take a screenshot
 bind = $mainMod,Print, exec, grim -g "$(slurp)" "$HOME/Pictures/screenshots/$(date +'%s_grim.png')"
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
+
+# Move focus to adjacent monitor (left/right; add up/down if monitors are stacked)
+bind = $mainMod ALT, h, focusmonitor, l  # Focus left monitor
+bind = $mainMod ALT, l, focusmonitor, r  # Focus right monitor
+
+# Move active window to adjacent monitor
+bind = $mainMod SHIFT ALT, h, movewindow, mon:l
+bind = $mainMod SHIFT ALT, l, movewindow, mon:r
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
