--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,9 +1,9 @@
 {
 	"layer": "top",
 	"height": 28,
-	"modules-left": ["custom/launcher","network","cpu","memory","custom/disk","custom/updates"],
+	"modules-left": ["custom/launcher","clock#date","clock","custom/updates"],
 	"modules-center": ["hyprland/workspaces"],
-	"modules-right": ["pulseaudio","clock","clock#date","battery","custom/power"], 
+	"modules-right": ["custom/disk","cpu","memory","battery","network","hyprland/language","pulseaudio","custom/power"], 
 	
 	"pulseaudio": {
 		"tooltip": false,
@@ -84,5 +84,9 @@
         "on-click-right": "nm-applet",
         "interval": 30,
         "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
+    },
+    "hyprland/language": {
+        "format": "{short}",
+        "tooltip-format": "{long}"
     }
 }
