--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -221,6 +221,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, M, movecurrentworkspacetomonitor, +1
+bind = $mainMod, period, switchxkblayout, next
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
