--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -198,6 +198,8 @@ device {
 }
 
 input {
+    kb_layout = us,no
+    kb_options = grp:alt_shift_toggle
     touchpad {
         natural_scroll = yes
     }
