--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -223,7 +223,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, M, movecurrentworkspacetomonitor, +1
-bind = $mainMod, period, switchxkblayout, next
+bind = $mainMod, period, exec, hyprctl switchxkblayout next
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
