--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -93,7 +93,7 @@ label {
 
 label {
     monitor =
-    text = $LAYOUT[en,ru]
+    text = $LAYOUT[en,no]
     font_size = 24
     onclick = hyprctl switchxkblayout all next
 
