--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
 	"layer": "top",
 	"height": 28,
-	"modules-left": ["custom/launcher","battery","clock#date","clock#time","custom/updates"],
+	"modules-left": ["custom/launcher","battery","clock#date","clock#time","custom/updates", "custom/email"],
 	"modules-center": ["hyprland/workspaces"],
 	"modules-right": ["custom/disk","cpu","memory","temperature","network","hyprland/language","pulseaudio","custom/power"], 
 	
@@ -57,7 +57,7 @@
     },
     "custom/launcher":{
         "format": " ",
-        "on-click": "wofi -show drun",
+        "on-click": "wofi --show drun --term=ghostty --width=40% --columns 2 -I -s ~/.config/wofi/style.css",
         "on-click-right": "killall wofi"
     },
     "custom/power": {
@@ -99,5 +99,11 @@
         "format": "{short}",
         "tooltip-format": "{long}",
         "on-click": "hyprctl switchxkblayout next"
-    }
+    },
+    "custom/email": {
+        "format": " {}",
+        "exec": "~/.config/waybar/email_unread.sh",
+        "interval": 60,
+        "tooltip": false
+    },
 }
