--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -108,7 +108,7 @@
     },
     "custom/meetings": {
         "format": " {}",
-        "exec": "~/.config/waybar/scripts/thunderbird_meetings.py",
+        "exec": "python ~/.config/waybar/scripts/thunderbird_meetings.py",
         "return-type": "json",
         "interval": 60,
         "tooltip": true
