--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -4,7 +4,7 @@
 #preload = /home/henning/src/dotfiles/wallpapers/nature.jpg
 #preload = /home/henning/src/dotfiles/wallpapers/nm.jpeg
 #preload = /home/henning/src/dotfiles/wallpapers/streetsig.jpg
-preload = /home/henning/src/dotfiles/wallpapers/archwindows.jpg
+preload = /home/henning/src/dotfiles/wallpapers/archwindows.png
 
 # Set for laptop screen
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/neonrain.png
@@ -13,7 +13,7 @@ preload = /home/henning/src/dotfiles/wallpapers/archwindows.jpg
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/nature.jpg
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/nm.jpeg
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/streetsig.jpg
-wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/archwindows.jpg
+wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/archwindows.png
 
 # Set for external HDMI monitor
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/neonrain.png
@@ -22,5 +22,5 @@ wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/archwindows.jpg
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/nature.jpg
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/nm.jpeg
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/streetsig.jpg
-wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/archwindows.jpg
+wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/archwindows.png
 
