--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@ set -g base-index 1
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy -in -selection clipboard'
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -20,7 +20,7 @@ bind -r l select-pane -R
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/src/todo.md"
 
-bind-key -r C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r C-f run-shell "tmux neww ~/.config/tmux-sessionizer/tmux-sessionizer.conf"
 bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
 bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
 bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
