--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,8 +20,15 @@ bind -r l select-pane -R
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/src/todo.md"
 
-bind-key -r C-f run-shell "tmux neww ~/.config/tmux-sessionizer/tmux-sessionizer.conf"
+bind-key -r C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
 bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
 bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
+
+# Update status bar color after switching windows or when a window is (re)linked
+set-hook -g after-select-window 'run-shell "~/.local/bin/tmux-status-color"'
+set-hook -g window-linked        'run-shell "~/.local/bin/tmux-status-color"'
+
+# Also set it once on tmux startup / first attach
+set-hook -g client-attached      'run-shell "~/.local/bin/tmux-status-color"'
 
