--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,10 +20,7 @@ bind -r l select-pane -R
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/src/todo.md"
 
-bind-key -r C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
-bind-key -r M-h run-shell "tmux neww tmux-sessionizer.sh -s 0"
-bind-key -r M-t run-shell "tmux neww tmux-sessionizer.sh -s 1"
-bind-key -r M-n run-shell "tmux neww tmux-sessionizer.sh -s 2"
+bind-key -r C-f run-shell "~/.local/bin/tmux-sessionizer.sh"
 
 # Update status bar color after switching windows or when a window is (re)linked
 set-hook -g after-select-window 'run-shell "~/.local/bin/tmux-status-color.sh"'
