--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,26 +1,17 @@
 #preload = /home/henning/src/dotfiles/wallpapers/neonrain.png
 #preload = /home/henning/src/dotfiles/wallpapers/alienlandscape.png
-#preload = /home/henning/src/dotfiles/wallpapers/fjord.jpg
-#preload = /home/henning/src/dotfiles/wallpapers/nature.jpg
+preload = /home/henning/src/dotfiles/wallpapers/fjord.jpg
 #preload = /home/henning/src/dotfiles/wallpapers/nm.jpeg
-#preload = /home/henning/src/dotfiles/wallpapers/streetsig.jpg
-preload = /home/henning/src/dotfiles/wallpapers/archwindows.png
 
 # Set for laptop screen
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/neonrain.png
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/alienlandscape.png
-#wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
-#wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/nature.jpg
+wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/nm.jpeg
-#wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/streetsig.jpg
-wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/archwindows.png
 
 # Set for external HDMI monitor
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/neonrain.png
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/alienlandscape.png
-#wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
-#wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/nature.jpg
+wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/nm.jpeg
-#wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/streetsig.jpg
-wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/archwindows.png
 
