--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,15 +1,3 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
-
 ################
 ### MONITORS ###
 ################
@@ -37,7 +25,12 @@ $terminal = ghostty
 $fileManager = nautilus
 #$menu = rofi -show drun -p "Search> " | xargs -I{} search {}
 #$menu = wofi -show drun -p "Search> " | xargs -I{} search {}
-$menu = wofi --show drun --term=ghostty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
+
+# Old line (kept here commented for reference):
+# $menu = wofi --show drun --term=ghostty --width=40% --columns 2 -I -s ~/.config/wofi/style.css
+#
+# New line: let ~/.config/wofi/config decide width, columns, fuzzy, etc.
+$menu = wofi --show drun
 
 #################
 ### AUTOSTART ###
@@ -273,18 +266,6 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Take a screenshot
-bind = $mainMod,Print, exec, grim -g "$(slurp)" "$HOME/Pictures/screenshots/$(date +'%s_grim.png')"
-bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
-
-# Move focus to adjacent monitor (left/right; add up/down if monitors are stacked)
-bind = $mainMod ALT, h, focusmonitor, l  # Focus left monitor
-bind = $mainMod ALT, l, focusmonitor, r  # Focus right monitor
-
-# Move active window to adjacent monitor
-bind = $mainMod SHIFT ALT, h, movewindow, mon:l
-bind = $mainMod SHIFT ALT, l, movewindow, mon:r
-
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -310,9 +291,4 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-
-# make portals see Hyprland’s env
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE HYPRLAND_INSTANCE_SIGNATURE
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE HYPRLAND_INSTANCE_SIGNATURE
-
 
