fix: config changed in new hyprland version

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -88,8 +88,8 @@ general {
     layout = dwindle
 }
 
-layerrule = blur, ^(waybar)$
-layerrule = ignorealpha 0, ^(waybar)$
+# Layer rules - NEW SYNTAX for 0.53+
+layerrule = blur on, ignore_alpha 0, match:namespace waybar
 
 decoration {
     rounding = 10
@@ -278,17 +278,20 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(ghostty)$,title:^(ghostty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# NEW SYNTAX for 0.53+
+windowrule = suppress_event maximize, match:class .*
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# The old nofocus rule for XWayland edge cases is no longer needed in most cases
+# and the syntax changed. If you still need it, use:
+# windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland true, match:float true, match:fullscreen false, match:pinned false
+# However, this is likely not needed for a minimal config - you can remove it entirely.
 
 ## COPIED FROM :  https://wiki.hyprland.org/0.46.0/Configuring/Workspace-Rules/#smart-gaps
-## TODO, i don't know what tv1 means...?
+## TODO, i don't know what tv1 means...? (tv1 = "tiled, visible, 1 window")
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-
+# NEW SYNTAX for 0.53+
+windowrule = bordersize 0, match:float false, match:onworkspace w[tv1]
+windowrule = rounding 0, match:float false, match:onworkspace w[tv1]
+windowrule = bordersize 0, match:float false, match:onworkspace f[1]
+windowrule = rounding 0, match:float false, match:onworkspace f[1]
